test_suite/alan-2022-examples/failing/006630_mutation.alan
source _ begin leave 904 then end
